--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@angular/animations": "^15.2.0",
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
-    "@angular/core": "^15.2.0",
+    "@angular/core": "^15.2.9",
     "@angular/forms": "^15.2.0",
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
@@ -24,6 +24,7 @@
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^10.2.0",
     "rxjs": "~7.8.0",
+    "toastr": "^2.1.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
